--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "server": "nodemon server.js"
+     "start": "node api/index.js",
+    "dev": "nodemon api/index.js"
   },
   "author": "",
   "license": "ISC",
