--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,14 +2,20 @@
     "version": 2,
     "builds": [
       {
-        "src": "./server.js",
+        "src": "api/index.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
+        "src": "/api/(.*)",
+        "dest": "/api/index.js"
+      },
+      {
         "src": "/(.*)",
-        "destination": "/"
+        "dest": "/api/index.js"
       }
     ]
   }
+  
+  
