--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,15 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
+  "start": "node api/index.js"
+}
+,
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -16,7 +20,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "nodemon": "^3.1.7",
-    "razorpay": "^2.9.5",
-    "serverless-http": "^3.2.0"
+    "razorpay": "^2.9.5"
   }
 }
