--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-  "start": "node api/index.js"
+  "start": "node api/index.js",
+  "postinstall": "npm rebuild bcrypt --build-from-source"
 }
 ,
   "author": "",
