--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,19 @@
 {
   "name": "server",
-  [v0-no-op-code-block-prefix][v0-additional-meta]isAttachmentQuickEdit[/v0-additional-meta][v0-no-op-code-block-prefix][v0-additional-meta]isAttachmentQuickEdit[/v0-additional-meta]"version": "1.0.0",
+  "version": "1.0.0",
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node api/index.js"
-  },
+  "start": "node api/index.js",
+  "postinstall": "npm rebuild bcrypt --build-from-source"
+}
+,
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
