--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,12 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "api/index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-  "start": "node api/index.js"
-}
-,
+    "start": "node server.js",
+    "server": "nodemon server.js"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
